<resources>
    <string name="app_name">InstagramFakeApp</string>
    <string name="username">Phone number, username or Email address</string>
    <string name="password">Password</string>
    <string name="forgottenpassword">Forgotten password?</string>
    <string name="login">Log In</string>
    <string name="or">OR</string>
    <string name="loginwithfacebook">Log in with Facebook</string>
    <string name="donthaveanaccount">Don\'t have an account?</string>
    <string name="signup">Sign Up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vietnguyenw">vietnguyenw</string>
    <string name="post">Post</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="editprofile">Edit Profile</string>
</resources>
