<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="261dp"
        android:layout_height="98dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/instagramlogo2" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:textSize="@dimen/sp16dp"
        android:paddingLeft="@dimen/sp16dp"
        android:background="@drawable/backgound_login_input"
        android:hint="@string/username"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:paddingLeft="@dimen/sp16dp"
        android:background="@drawable/backgound_login_input"
        android:hint="@string/password"
        android:textSize="@dimen/sp16dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/edtUsername"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edtUsername"
        app:layout_constraintTop_toBottomOf="@+id/edtUsername" />

    <TextView
        android:id="@+id/txtForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/forgottenpassword"
        android:textColor="@color/colorBlueLight"
        app:layout_constraintEnd_toEndOf="@+id/edtPassword"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/edtPassword"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

    <Button
        android:id="@+id/bttLogin"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:background="@drawable/backgound_login_button"
        android:enabled="false"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/txtForgotPass"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/txtForgotPass"
        app:layout_constraintTop_toBottomOf="@+id/txtForgotPass" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="140dp"
        android:layout_height="2dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_weight="1"
        android:background="@drawable/background_boder_bottom"
        app:layout_constraintEnd_toEndOf="@+id/bttLogin"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/bttLogin" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="140dp"
        android:layout_height="2dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/background_boder_bottom"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/bttLogin" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/or"
        app:layout_constraintEnd_toEndOf="@+id/bttLogin"
        app:layout_constraintStart_toStartOf="@+id/bttLogin"
        app:layout_constraintTop_toBottomOf="@+id/bttLogin" />

    <Button
        android:id="@+id/bttLoginFacebook"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/backgound_login_button_active"
        android:text="@string/loginwithfacebook"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="@dimen/sp16dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bttLoginFacebook"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/sp6dp"
            android:textSize="12dp"
            android:text="@string/donthaveanaccount" />

        <TextView
            android:id="@+id/txtSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textColor="@color/colorBlueDark"
            android:text="@string/signup" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtLoginNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textSize="10dp"
        android:textColor="#FF0000"
        app:layout_constraintBottom_toTopOf="@+id/edtUsername"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.846" />

</androidx.constraintlayout.widget.ConstraintLayout>